--- a/docs/assets/css/proj.css
+++ b/docs/assets/css/proj.css
@@ -68,6 +68,10 @@
   display: flex;
 }
 
+.toggle header {
+  padding-top: 12.174em;
+}
+
 .toggle .menu {
   display: none;
 }
@@ -556,6 +560,9 @@
 }
 
 @media screen and (min-width: 2000px) { /* Desktop */
+  .toggle header {
+    padding-top: 11.25em;
+  }
   :root {
     --font-size: 1em;
   }
@@ -593,6 +600,12 @@
   }
   .laphide {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .toggle header {
+    padding-top: 11.66em;
   }
 }
 
@@ -672,6 +685,9 @@
   }
   .content8 {
     top: calc(var(--content1-height) + var(--content6-height) + 25em);
+  }
+  .toggle header {
+    padding-top: 6em;
   }
 }
 
